test/data/syntax-errors/invalid-conditional.jen
if :
    print('this will not work')
